test/test_networkpolicy.yml
---

apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-out-to-in
  namespace: default
spec:
  podSelector: {}
  ingress:
  - from:
    - podSelector:
        matchLabels:
          mylabel: out
  egress:
  - to:
    - podSelector:
        matchLabels:
          mylabel: in
  policyTypes:
  - Ingress
  - Egress
