test/test_pod.yml
---

apiVersion: v1
kind: Pod
metadata:
  name: test-pod-nginx
  labels:
    app: webserver
spec:
  containers:
  - name: ctr-nginx
    image: nginx:1.14.2
    ports:
    - containerPort: 80
