test/test_service.yml
---

apiVersion: v1
kind: Service
metadata:
  name: test-service
spec:
  selector:
    app: webserver
  type: ClusterIP
  ports:
  - protocol: TCP
    port: 8080
    targetPort: 80
